# atlas

./: Cargo.toml
src/: alloc.rs  array.rs  collection.rs  consts.rs  dataset.rs  dtype.rs  header.rs  io.rs  lib.rs  schema.rs  variable.rs
src/schema/: mod.rs  raw.rs  reader.rs  wal.rs  writer.rs
src/variable/: blob_encoding.rs  data_blob.rs  metadata_blob.rs  mod.rs  util.rs
src/variable/array/: blob.rs  datatype.rs  discovery.rs  error.rs  fill_value.rs  metadata.rs  mod.rs  reader.rs  util.rs  writer.rs
src/variable/attributes/: discovery.rs  mod.rs  reader.rs  writer.rs
tests/: io_handler.rs
